--- a/app/src/main/res/layout/activity_detalle_pelicula.xml
+++ b/app/src/main/res/layout/activity_detalle_pelicula.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/iv_pelicula_imagen"
@@ -39,6 +39,28 @@
             android:text="Aqui descripcion de pelicula"
             android:textColor="@color/yellow"
             />
+        <Button
+            android:id="@+id/buyTickets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_button"
+            android:paddingHorizontal="@dimen/paddingButton"
+            android:text="BUY MY TICKETS!"
+            />
+        <TextView
+            android:id="@+id/seatLeft"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="30dp"
+            android:text="0"
+            android:textSize="14sp"
+            android:layout_gravity="center"
+            android:textColor="@color/yellow"
+            />
+
 
     </LinearLayout>
 </LinearLayout>
